--- a/Thermodynamics.csproj
+++ b/Thermodynamics.csproj
@@ -44,13 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FlatGenerator.cs" />
+    <Compile Include="BoltzmannGenerator.cs" />
+    <Compile Include="FunctionGenerator.cs" />
+    <Compile Include="InteractingParticleContainer.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleContainer.cs" />
+    <Compile Include="ParticleContainerGrid.cs" />
     <Compile Include="ParticleDictionary.cs" />
     <Compile Include="ParticleInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomGenerator.cs" />
+    <Compile Include="SimpleParticleContainerGrid.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DongUtility\DongUtility.csproj">
